fix: fix device name too long issue

--- a/packages/agora-scenario-ui-kit/src/components/select/index.css
+++ b/packages/agora-scenario-ui-kit/src/components/select/index.css
@@ -52,6 +52,9 @@
   color: #586376;
   line-height: 34px;
   text-indent: 14px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .options-container .option-item.is-select {
   color: #357bf6;
